<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">美食街</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="menu_search">搜索</string>
    <string name="menu_collect">收藏</string>
    <string name="menu_share">分享</string>
    <string name="menu_user_login">用户登录</string>
    <string name="menu_user_register">注册用户</string>
    <string name="menu_soft_setting">软件设置</string>
    <string name="menu_offer_suggest">提供建议</string>
    <string name="menu_about_us">关于我们</string>
    
    <string name="search_hint">请输入搜索的菜名</string>
    <string name="search_button">搜索</string>
    <string name="search_history">搜索历史</string>
    
    <string name="login_user_name_title">用户名称：</string>
    <string name="login_user_name_hint">请输入用户名</string>
    <string name="login_user_pwd_title">用户密码：</string>
    <string name="login_user_pwd_hint">请输入密码</string>
    <string name="login_button_content">登        录</string>
    <string name="login_checkbox_content">记住密码</string>
    <string name="login_register_button_content">用户注册</string>
    
    <string name="tab6_wefind_content">大家的发现</string>
    <string name="tab6_ifind_content">我的发现</string>
    <string name="tab6_newind_content">分享新发现</string>
    
    <string name="tab6_ifind_edit_hint">输入你发现的好吃的菜</string>
    <string name="tab6_ifind_delete">删除</string>
    <string name="tab6_ifind_rfresh">刷新</string>
    <string name="tab6_list_item_title_content">发现啦！！！</string>
    <string name="tab6_list_item_describe_content">发现的描述</string>
    <string name="tab6_list_item_hold_number_content">支持人数：200+</string>
    
    <string name="offer_suggest_content">提供建议给开发者</string>
    <string name="offer_suggest_edit_hit">请输入你想对开发者说的建议</string>
    <string name="offer_suggest_send_content">发送建议</string>
    
    <string name="register_title">用户注册</string>
    <string name="register_username_content">*用户名称：</string>
    <string name="register_username_hint">请输入用户名</string>
    <string name="register_pwd_content">*用户密码：</string>
    <string name="register_pwd_hint">请输入用户密码</string>
    <string name="register_pwd2_content">*确认密码：</string>
    <string name="register_pwd2_hint">请输入用户密码</string>
    <string name="register_image_select">选择一张图片作为头像</string>
    <string name="register_radiobutton1_content">王力宏</string>
    <string name="register_radiobutton2_content">张学友</string>
    <string name="register_radiobutton3_content">周杰伦</string>
    <string name="register_button_content">提交注册</string>

</resources>
