<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/login_user_name_rl"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="40dp" >

        <TextView
            android:id="@+id/login_user_name_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/login_user_name_title"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/login_user_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/login_user_name_title"
            android:layout_toRightOf="@id/login_user_name_title"
            android:hint="@string/login_user_name_hint"
            android:inputType="text" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/login_user_pwd_rl"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_user_name_rl"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp" >

        <TextView
            android:id="@+id/login_user_pwd_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/login_user_pwd_title"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/login_user_pwd"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/login_user_pwd_title"
            android:layout_toRightOf="@id/login_user_pwd_title"
            android:hint="@string/login_user_pwd_hint"
            android:inputType="textPassword" />
    </RelativeLayout>

    <Button
        android:id="@+id/login_button"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_below="@id/login_user_pwd_rl"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="10dp"
        android:textColor="@android:color/white"
        android:background="@drawable/app_button_select"
        android:text="@string/login_button_content" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_button"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:orientation="horizontal" >

        <CheckBox
            android:id="@+id/login_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:button="@null"
            android:checked="false"
            android:drawableLeft="@drawable/checkbox_bg"
            android:paddingTop="2dp"
            android:text="@string/login_checkbox_content"
            android:textColor="#000000"
            android:textSize="12sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="haha"
            android:visibility="invisible" />

        <Button
            android:id="@+id/login_register_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@drawable/login_reg_button"
            android:gravity="left|center"
            android:paddingLeft="8dp"
            android:paddingRight="25dp"
            android:text="@string/login_register_button_content"
            android:textColor="#ffffffff"
            android:textSize="10sp" />
    </LinearLayout>

</RelativeLayout>