<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="160dp" >

    <ImageView
        android:id="@+id/tab6_list_item_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_margin="5dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/tab6_list_item_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="4dp"
        android:layout_toRightOf="@id/tab6_list_item_image"
        android:singleLine="true"
        android:text="@string/tab6_list_item_title_content"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tab6_list_item_describe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/tab6_list_item_title"
        android:layout_below="@id/tab6_list_item_title"
        android:layout_marginTop="2dp"
        android:maxLines="2"
        android:text="@string/tab6_list_item_describe_content"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tab6_list_item_source"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/tab6_list_item_describe"
        android:layout_below="@id/tab6_list_item_describe"
        android:layout_marginTop="2dp"
        android:paddingLeft="8dp"
        android:singleLine="true"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tab6_list_item_hold_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/tab6_list_item_title"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="5dp"
        android:text="@string/tab6_list_item_hold_number_content"
        android:textSize="14sp" />

    <ImageButton
        android:id="@+id/tab6_list_item_hold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="5dp"
        android:background="@drawable/app_button_select"
        android:src="@drawable/rating_good" />

</RelativeLayout>