<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/taby_bottom"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/button_no_select"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/tab6_wefind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_selected02"
            android:gravity="center_vertical|center_horizontal"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/tab6_wefind_content"
            android:textSize="16sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="2dp"
            android:layout_height="fill_parent"
            android:background="@android:color/darker_gray" />

        <Button
            android:id="@+id/tab6_ifind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_no_select"
            android:gravity="center_vertical|center_horizontal"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/tab6_ifind_content"
            android:textSize="16sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="2dp"
            android:layout_height="fill_parent"
            android:background="@android:color/darker_gray" />

        <Button
            android:id="@+id/tab6_newfind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_no_select"
            android:gravity="center_vertical|center_horizontal"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/tab6_newind_content"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TabHost
        android:id="@android:id/tabhost"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/taby_bottom" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <!-- Tab的控制区 -->

            <HorizontalScrollView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:scrollbars="none" >

                <TabWidget
                    android:id="@android:id/tabs"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone" />
            </HorizontalScrollView>
            <!-- Tab的内容区 -->

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" />
        </LinearLayout>
    </TabHost>

</RelativeLayout>